Added name and email to contact form

--- a/TabbMarcusExerciseLayout/index.html
+++ b/TabbMarcusExerciseLayout/index.html
@@ -32,7 +32,7 @@
           </div>
           <button type="submit">Login</button>
         </form>
-        <h1>Gears of War</h1>
+        <h1>Gears of War!!</h1>
         <nav>
           <ul>
             <li><a href="#plot">Plot</a></li>
