Made changes to forms and Javascript

--- a/TabbMarcusExerciseForms/index.html
+++ b/TabbMarcusExerciseForms/index.html
@@ -42,6 +42,12 @@
             <li><a href="#">Sign In</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
+          <ol>
+            <li>Step 1</li>
+            <li>Step 2</li>
+            <li>Step 3</li>
+            <li>Step 4</li>
+          </ol>
         </nav>
       </header>
       <main>
@@ -332,6 +338,7 @@
         <p>Copyright Gears of War</p>
       </footer>
     </div>
-    <script src="script/main.js"></script>
+    <!-- Javascript file -->
+    <script src="scripts/main.js"></script>
   </body>
 </html>
